add support for file level auditing / metrics management
